--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 
 <body>
   <header>
-    <div class="container">
+    <div class="container" id="top">
+      <ul class="skip-links">
+        <li><a href="#nav">Skip to nav</a></li>
+        <li><a href="#main">Skip to main content</a></li>
+        <li><a href="#owner-info">Skip to owner information</a></li>
+        <li><a href="#contact">Skip to contact form</a></li>
+      </ul>
       <div class="site-header">
         <h1>Jam Box Studios</h1>
       </div>
-      <div class="main-nav">
+      <div class="main-nav" id="nav">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
@@ -31,7 +37,7 @@
     </div>
   </header>
   <main>
-    <div class="main-content">
+    <div class="main-content" id="main">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa
         eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio
@@ -40,7 +46,7 @@
         omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto
         error voluptatibus.</p>
     </div>
-    <div class="owner">
+    <div class="owner" id="owner-info">
       <h1>Meet the owner</h1>
       <ul>
         <li>Name: John Doe</li>
@@ -56,7 +62,7 @@
         B3T 0L0
       </p>
     </div>
-    <div class="contact-section">
+    <div class="contact-section" id="contact">
       <h1>Contact Us</h1>
       <form action="thanks.html">
         <label>Full Name</label>
@@ -70,7 +76,7 @@
     </div>
   </main>
   <footer>
-    &copy; 2021 Jam Box Studios
+    <p>&copy; 2021 Jam Box Studios</p> <a href="#top">Back to the top</a>
   </footer>
 </body>
 </html>
