--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
 </head>
 
 <body>
-  <header>
+  <header role="banner">
     <div class="container" id="top">
       <ul class="skip-links">
-        <li><a href="#nav">Skip to nav</a></li>
-        <li><a href="#main">Skip to main content</a></li>
-        <li><a href="#owner-info">Skip to owner information</a></li>
-        <li><a href="#contact">Skip to contact form</a></li>
+        <li><a href="#nav" aria-label="Skips to navigation of the page">Skip to nav</a></li>
+        <li><a href="#main" aria-label="Skips to main content of the page">Skip to main content</a></li>
+        <li><a href="#owner-info" aria-label="Skips to the owner info of the page">Skip to owner information</a></li>
+        <li><a href="#contact" aria-label="Skips to the contact form of the page">Skip to contact form</a></li>
       </ul>
       <div class="site-header">
-        <h1>Jam Box Studios</h1>
+        <h1 role="heading">Jam Box Studios</h1>
       </div>
-      <div class="main-nav" id="nav">
+      <div class="main-nav" id="nav" role="navigation">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Reservation</a></li>
-          <li><a href="#">Studio</a></li>
+          <li><a href="#" aria-label="Takes you to home page">Home</a></li>
+          <li><a href="#" aria-label="Takes you to products page">Products</a></li>
+          <li><a href="#" aria-label="Takes you to reservation page">Reservation</a></li>
+          <li><a href="#" aria-label="Takes you to studio page">Studio</a></li>
         </ul>
       </div>
       <img src="https://placekitten.com/1200/900" alt="Photo of a baby kitten staring into the camera" class="banner">
     </div>
   </header>
-  <main>
+  <main role="main">
     <div class="main-content" id="main">
-      <h1>Welcome to Jam Box</h1>
+      <h1 role="heading">Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa
         eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio
         quia veritatis.</p>
@@ -47,14 +47,14 @@
         error voluptatibus.</p>
     </div>
     <div class="owner" id="owner-info">
-      <h1>Meet the owner</h1>
+      <h1 role="heading">Meet the owner</h1>
       <ul>
         <li>Name: John Doe</li>
         <li>Title: CEO</li>
         <li>Email: johnjoe@jambox.ca</li>
         <li>Phone: 613-000-0000</li>
       </ul>
-      <h1>Address</h1>
+      <h1 role="heading">Address</h1>
       <p>
         Jambox Studios
         123 Guitar Road,
@@ -63,8 +63,8 @@
       </p>
     </div>
     <div class="contact-section" id="contact">
-      <h1>Contact Us</h1>
-      <form action="thanks.html">
+      <h1 role="heading">Contact Us</h1>
+      <form action="thanks.html" role="form">
         <label>Full Name</label>
         <input type="text" placeholder="Full Name">
         <input type="text" placeholder="Email">
@@ -75,7 +75,7 @@
       </form>
     </div>
   </main>
-  <footer>
+  <footer role="contentinfo">
     <p>&copy; 2021 Jam Box Studios</p> <a href="#top">Back to the top</a>
   </footer>
 </body>
